[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://crosshair.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/ar1/1.fbx" type="PackedScene" id=3]
[ext_resource path="res://art/music/9mm-pistol-shoot-short-reverb-7152.mp3" type="AudioStream" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/music/rifle-or-shotgun-reload-6787.mp3" type="AudioStream" id=6]
[ext_resource path="res://art/music/empty-gun-shot-6209.mp3" type="AudioStream" id=7]
[ext_resource path="res://art/music/emptyReloadSound.wav" type="AudioStream" id=8]
[ext_resource path="res://flame.glb" type="PackedScene" id=9]
[ext_resource path="res://UserInterface.gd" type="Script" id=10]
[ext_resource path="res://art/hud_heartFull.png" type="Texture" id=11]
[ext_resource path="res://art/hud_heartEmpty.png" type="Texture" id=12]
[ext_resource path="res://art/ferrum.extra-condensed.otf" type="DynamicFontData" id=13]
[ext_resource path="res://flash.tscn" type="PackedScene" id=14]
[ext_resource path="res://art/music/GunCockSingle PE1096303.mp3" type="AudioStream" id=15]
[ext_resource path="res://hitmarker.tscn" type="PackedScene" id=16]
[ext_resource path="res://art/music/hitmarker_2.mp3" type="AudioStream" id=17]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/gun:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.711, -0.346, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Camera/gun:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head/Camera/gunAimed:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.033, -0.42, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "reload"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/gun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 0, -90, 10 ), Vector3( 0, -90, 0 ), Vector3( 0, -90, -10 ), Vector3( 0, -90, 0 ), Vector3( 0, -90, 10 ), Vector3( 0, -90, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/gun:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.711, -0.346, 0 ), Vector3( 0.711, -0.346, 0.25 ), Vector3( 0.711, -0.346, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "shootReload"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Camera/gunAimed:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.06, -0.39, 0 ), Vector3( 0.06, -0.39, 0.1 ) ]
}

[sub_resource type="CapsuleMesh" id=6]

[sub_resource type="CylinderShape" id=11]

[node name="Player" type="KinematicBody" groups=["players"]]
collision_layer = 3
collision_mask = 5
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.45925, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49249, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 300.0

[node name="RayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 900, 0, 0, 0.172852 )
enabled = true
cast_to = Vector3( 0, 0, -5 )
collide_with_areas = true

[node name="hitmarker" parent="Head/Camera" instance=ExtResource( 16 )]
visible = false

[node name="crosshair" parent="Head/Camera" instance=ExtResource( 2 )]

[node name="gun" parent="Head/Camera" instance=ExtResource( 3 )]
transform = Transform( -4.30473e-08, 7.59041e-09, -1, 0.173648, 0.984808, 0, 0.984808, -0.173648, -4.37114e-08, 0.711, -0.346, 0.25 )

[node name="gunshot" type="AudioStreamPlayer3D" parent="Head/Camera/gun"]
transform = Transform( 1.19249e-08, 0, 1, 0, 1, 0, -1, 0, 1.19249e-08, -0.25, -1.14649, 0.711 )
stream = ExtResource( 4 )

[node name="reload" type="AudioStreamPlayer3D" parent="Head/Camera/gun"]
stream = ExtResource( 6 )

[node name="emptygunshot" type="AudioStreamPlayer3D" parent="Head/Camera/gun"]
stream = ExtResource( 7 )

[node name="emptyReload" type="AudioStreamPlayer3D" parent="Head/Camera/gun"]
stream = ExtResource( 8 )

[node name="flame" parent="Head/Camera/gun" instance=ExtResource( 9 )]
transform = Transform( -4.37114e-09, -0.0999421, -0.00340273, 0, -0.00340273, 0.0999421, -0.1, 4.36861e-09, 1.48738e-10, -2.76637, 0.0464674, 0.0234395 )
visible = false

[node name="flash" parent="Head/Camera/gun" instance=ExtResource( 14 )]
transform = Transform( 0.0301535, 0.17101, 0.984807, 0.17101, 0.969846, -0.173648, -0.984808, 0.173648, -1.39091e-08, -2.7072, 0.0444824, -0.134888 )
visible = false

[node name="gunAimed" parent="Head/Camera" instance=ExtResource( 3 )]
transform = Transform( 0.0410601, 0, -0.99933, 0, 1, 0, 1.04226, 0, 0.0393686, 0.033, -0.42, 0 )

[node name="HUD" parent="Head/Camera" instance=ExtResource( 5 )]

[node name="UserInterface" type="Control" parent="Head/Camera"]
margin_right = 1023.0
margin_bottom = 603.0
script = ExtResource( 10 )

[node name="HPSystem" type="Control" parent="Head/Camera/UserInterface"]
margin_left = 350.0
margin_right = 665.0
margin_bottom = 51.0

[node name="HeartsEmpty" type="TextureRect" parent="Head/Camera/UserInterface/HPSystem"]
margin_left = 97.0
margin_top = 1.0
margin_right = 309.0
margin_bottom = 46.0
texture = ExtResource( 12 )
stretch_mode = 2

[node name="HeartsFull" type="TextureRect" parent="Head/Camera/UserInterface/HPSystem"]
margin_left = 97.0
margin_top = 1.0
margin_right = 309.0
margin_bottom = 46.0
texture = ExtResource( 11 )
stretch_mode = 2

[node name="HealthLabel" type="Label" parent="Head/Camera/UserInterface/HPSystem"]
margin_left = -1.0
margin_top = 4.0
margin_right = 98.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Health"

[node name="WaveLabel" type="Label" parent="Head/Camera/UserInterface"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -96.5
margin_right = 148.5
margin_bottom = -20.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Wave"
align = 1
valign = 1

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/reload = SubResource( 8 )
anims/shoot = SubResource( 5 )
anims/shootReload = SubResource( 9 )

[node name="direction" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0, 16.4229, -1.51518 )
visible = false
mesh = SubResource( 6 )

[node name="reloadTimer" type="Timer" parent="."]

[node name="flameTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="MobDetector" type="Area" parent="." groups=["players"]]

[node name="CollisionShape" type="CollisionShape" parent="MobDetector"]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 0, 0 )
shape = SubResource( 11 )

[node name="pickupAmmoSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 15 )

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="hit_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 17 )
unit_db = 5.0
max_db = 5.124

[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="timeout" from="flameTimer" to="." method="_on_flameTimer_timeout"]
[connection signal="body_entered" from="MobDetector" to="." method="_on_MobDetector_body_entered"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
